fix alignment

--- a/styles/index.less
+++ b/styles/index.less
@@ -78,22 +78,18 @@ header {
         margin: 25px 0;
     }
 
-    img {
-        width: 175px;
-        // height: 56px;
-    }
-
     form {
-        border: 3px solid #F56C6C;
-        
+        border: 3px solid #F56C6C;   
+        .flexCenter();
     }
 
     input {
-        height: 32px;
         width: 490px;
-        border: none;
         padding: 0 4px;
         outline: none;
+        height: 32px;
+        border: none;
+        line-height: 32px;
     }
 
     button {
@@ -102,5 +98,6 @@ header {
         color: #fff;
         background-color: #F56C6C;
         border: none;
+        cursor: pointer;
     }
 }
